# EcoSort

./: .gitattributes  .gitignore  README.md  install_juno.sh  requirements-juno.txt  requirements.txt  setup_jeeva.txt
launch/: ecosort_startup.launch
msg/: WasteDetection.msg
ros/ecosort/: CMakeLists.txt  package.xml
ros/ecosort/config/: ecosort_juno.yaml
ros/ecosort/ecosort_core/: __init__.py  audio_utils.py  brain_node.py  camera_utils.py  gemini_client.py  vision_node.py  voice_node.py
ros/ecosort/launch/: ecosort_desktop_sim.launch  ecosort_io_juno.launch  ecosort_io_juno_astra.launch  ecosort_juno.launch  ecosort_juno2.launch  usb_cam.launch
ros/ecosort/msg/: EduResponse.msg  PatrolStatus.msg  WasteDetection.msg
ros/ecosort/scripts/: audio_handler_node.py  ecosort_path.py  gemini_brain_node.py  orchestrator_node.py  patrol_nav_node.py  sound_play_quiet.sh  waste_detector_node.py
scripts/: brain_node.py  camera_utils.py  find_juno_camera.sh  install_juno.sh  vision_node.py  voice_node.py
src/: brain_node.py  camera_utils.py  main.py  main_ros.py  ros_utils.py  test_camera.py  test_gemini.py  test_gemini_vision.py  test_stt.py  test_tts.py  test_yolo.py  vision_node.py  voice_node.py
